--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -997,6 +997,23 @@
 	<string name="traffic_update_maps_text">For å vise trafikkdata må kartene i appen være oppdaterte.</string>
 	<string name="traffic_outdated">Trafikkdata er utdatert.</string>
 	<string name="big_font">Større etiketter</string>
+	<string name="traffic_update_app">Vennligst oppdater MAPS.ME</string>
+	<!-- "traffic" as in road congestion -->
+	<string name="traffic_update_app_message">Du må oppdatere applikasjonen for å kunne se trafikkdata.</string>
+	<!-- "traffic" as in "road congestion" -->
+	<string name="traffic_data_unavailable">Trafikkdata er ikke tilgjengelig</string>
+	<string name="banner_deliveryclub_title">Matleveranse</string>
+	<string name="banner_deliveryclub_message">Hurtig leveranse fra 4000 restauranter. Bestill fra Delivery Club.</string>
+	<string name="banner_lamoda_title">Kles- og skobutikk online</string>
+	<string name="banner_lamoda_message">Flere enn 1000 ulike merker. Opptil 70 % rabatt. Gratis frakt over hele landet.</string>
+	<string name="banner_tutu_title">Togbilletter online</string>
+	<string name="banner_tutu_message">Togbilletter til alle byer – priser, søk og bestilling.</string>
+	<string name="banner_geerbest_title">Elektronikkbutikk online</string>
+	<string name="banner_geerbest_message">Hurtigsøk blant over 50 000 varer til lave priser.</string>
+	<string name="banner_rentalcars_title">Leie av bil online</string>
+	<string name="banner_rentalcars_message">800 leiebilfirmaer på over 49 000 steder.</string>
+	<string name="banner_viator_title">Αναζήτηση οργανωμένων εκδρομών online</string>
+	<string name="banner_viator_message">Søk blant over 50 000 omvisninger verden over.</string>
 	<!-- december -->
 	<string name="whatsnew_traffic">Trafikkdata i 36 land</string>
 	<!-- december -->
