--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -995,6 +995,23 @@
 	<string name="traffic_update_maps_text">Pentru a afişa datele privind traficul, hărțile trebuie actualizate.</string>
 	<string name="traffic_outdated">Datele privind traficul sunt învechite.</string>
 	<string name="big_font">Etichete mai mari</string>
+	<string name="traffic_update_app">Vă rugăm să actualizaţi MAPS.ME</string>
+	<!-- "traffic" as in road congestion -->
+	<string name="traffic_update_app_message">Pentru a afişa datele privind traficul, aplicația trebuie actualizată.</string>
+	<!-- "traffic" as in "road congestion" -->
+	<string name="traffic_data_unavailable">Datele privind traficul nu sunt disponibile.</string>
+	<string name="banner_deliveryclub_title">Livrare mâncare</string>
+	<string name="banner_deliveryclub_message">Livrare rapidă din 4.000 de restaurante. Comandați de la Delivery Club.</string>
+	<string name="banner_lamoda_title">Îmbrăcăminte și magazin de pantofi online</string>
+	<string name="banner_lamoda_message">Peste 1.000 de branduri. Până la 70% reducere. Livrare gratuită în toată țara.</string>
+	<string name="banner_tutu_title">Bilete de tren online</string>
+	<string name="banner_tutu_message">Bilete de tren către orice oraș online - prețuri, căutare şi rezervare.</string>
+	<string name="banner_geerbest_title">Magazin de produse electronice online</string>
+	<string name="banner_geerbest_message">Căutare instantanee printre peste 50.000 de articole la prețuri mici.</string>
+	<string name="banner_rentalcars_title">Închiriere mașini online</string>
+	<string name="banner_rentalcars_message">800 de firme care închiriază mașini în peste 49.000 de locații de închiriere mașini.</string>
+	<string name="banner_viator_title">Căutare excursii online</string>
+	<string name="banner_viator_message">Căutați în peste 50.000 de excursii din întreaga lume.</string>
 	<!-- december -->
 	<string name="whatsnew_traffic">Date privind traficul în 36 de țări</string>
 	<!-- december -->
