--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -1005,6 +1005,23 @@
 	<string name="traffic_update_maps_text">要显示交通数据，必须更新地图。</string>
 	<string name="traffic_outdated">交通数据已过时。</string>
 	<string name="big_font">更大的标签</string>
+	<string name="traffic_update_app">请更新 MAPS.ME</string>
+	<!-- "traffic" as in road congestion -->
+	<string name="traffic_update_app_message">要显示交通数据，必须更新应用。</string>
+	<!-- "traffic" as in "road congestion" -->
+	<string name="traffic_data_unavailable">交通数据不可用</string>
+	<string name="banner_deliveryclub_title">送餐</string>
+	<string name="banner_deliveryclub_message">4,000 家餐厅的快速送餐。从送餐俱乐部订餐。</string>
+	<string name="banner_lamoda_title">在线服装和鞋店</string>
+	<string name="banner_lamoda_message">超过 1,000 个品牌。最低三折起。全国免费派送。</string>
+	<string name="banner_tutu_title">在线火车票</string>
+	<string name="banner_tutu_message">在线购买前往任何城市的火车票 - 价格、搜索和预订。</string>
+	<string name="banner_geerbest_title">在线电子产品商店</string>
+	<string name="banner_geerbest_message">立即搜索价格超低的 50,000 余种商品。</string>
+	<string name="banner_rentalcars_title">在线租车</string>
+	<string name="banner_rentalcars_message">800 家租车公司，超过 49,000 个租车网点。</string>
+	<string name="banner_viator_title">在线导游搜索</string>
+	<string name="banner_viator_message">搜索全世界范围内的 50,000 多位导游。</string>
 	<!-- december -->
 	<string name="whatsnew_traffic">36 个国家/地区的交通数据</string>
 	<!-- december -->
