--- a/iphone/Maps/ko.lproj/Localizable.strings
+++ b/iphone/Maps/ko.lproj/Localizable.strings
@@ -1724,35 +1724,37 @@
 
 "big_font" = "더 큰 레이블";
 
-"traffic_update_app" = "Please update MAPS.ME";
+"traffic_update_app" = "MAPS.ME를 업데이트하세요.";
 
-"traffic_update_app_message" = "To display traffic data, the application must be updated.";
+/* "traffic" as in road congestion */
+"traffic_update_app_message" = "교통 데이터를 표시하려면 응용 프로그램을 업데이트해야 합니다.";
 
-"traffic_data_unavailable" = "Traffic data is not available";
+/* "traffic" as in "road congestion" */
+"traffic_data_unavailable" = "교통 데이터를 사용할 수 없습니다.";
 
-"banner_deliveryclub_title" = "Food delivery";
+"banner_deliveryclub_title" = "음식 배달";
 
-"banner_deliveryclub_message" = "Fast delivery from 4,000 restaurants. Order from Delivery Club.";
+"banner_deliveryclub_message" = "4,000곳의 레스토랑에서 신속하게 배달합니다. Delivery Club에서 주문하세요.";
 
-"banner_lamoda_title" = "Online clothing and shoe store";
+"banner_lamoda_title" = "온라인 의류 및 신발 스토어";
 
-"banner_lamoda_message" = "More than 1,000 brands. Up to 70% off. Free delivery all over the country.";
+"banner_lamoda_message" = "1,000개 이상의 브랜드. 최대 70% 할인. 전국 무료 배송.";
 
-"banner_tutu_title" = "Train tickets online";
+"banner_tutu_title" = "온라인 기차표";
 
-"banner_tutu_message" = "Train tickets to any city online - prices, search, and booking.";
+"banner_tutu_message" = "온라인으로 이용하는 모든 도시행 기차표 - 가격, 검색 및 예약.";
 
-"banner_geerbest_title" = "Online electronics store";
+"banner_geerbest_title" = "온라인 전자 기기 스토어";
 
-"banner_geerbest_message" = "Instant search in over 50,000 items at low prices.";
+"banner_geerbest_message" = "저렴한 가격의 50,000개 이상 품목에서 즉시 검색.";
 
-"banner_rentalcars_title" = "Renting cars online";
+"banner_rentalcars_title" = "온라인 자동차 렌트";
 
-"banner_rentalcars_message" = "800 car rental companies in more than 49,000 car rental locations.";
+"banner_rentalcars_message" = "800개의 자동차 렌트 회사와 49,000곳 이상의 자동차 렌트 지점";
 
-"banner_viator_title" = "Online tour search";
+"banner_viator_title" = "온라인 투어 검색";
 
-"banner_viator_message" = "Search in over 50,000 tours all over the world.";
+"banner_viator_message" = "전 세계 50,000개 이상의 투어에서 검색하세요.";
 
 /* december */
 "whatsnew_traffic" = "36개국의 교통 데이터";
