--- a/iphone/Maps/nb.lproj/Localizable.strings
+++ b/iphone/Maps/nb.lproj/Localizable.strings
@@ -1724,35 +1724,37 @@
 
 "big_font" = "Større etiketter";
 
-"traffic_update_app" = "Please update MAPS.ME";
+"traffic_update_app" = "Vennligst oppdater MAPS.ME";
 
-"traffic_update_app_message" = "To display traffic data, the application must be updated.";
+/* "traffic" as in road congestion */
+"traffic_update_app_message" = "Du må oppdatere applikasjonen for å kunne se trafikkdata.";
 
-"traffic_data_unavailable" = "Traffic data is not available";
+/* "traffic" as in "road congestion" */
+"traffic_data_unavailable" = "Trafikkdata er ikke tilgjengelig";
 
-"banner_deliveryclub_title" = "Food delivery";
+"banner_deliveryclub_title" = "Matleveranse";
 
-"banner_deliveryclub_message" = "Fast delivery from 4,000 restaurants. Order from Delivery Club.";
+"banner_deliveryclub_message" = "Hurtig leveranse fra 4000 restauranter. Bestill fra Delivery Club.";
 
-"banner_lamoda_title" = "Online clothing and shoe store";
+"banner_lamoda_title" = "Kles- og skobutikk online";
 
-"banner_lamoda_message" = "More than 1,000 brands. Up to 70% off. Free delivery all over the country.";
+"banner_lamoda_message" = "Flere enn 1000 ulike merker. Opptil 70 % rabatt. Gratis frakt over hele landet.";
 
-"banner_tutu_title" = "Train tickets online";
+"banner_tutu_title" = "Togbilletter online";
 
-"banner_tutu_message" = "Train tickets to any city online - prices, search, and booking.";
+"banner_tutu_message" = "Togbilletter til alle byer – priser, søk og bestilling.";
 
-"banner_geerbest_title" = "Online electronics store";
+"banner_geerbest_title" = "Elektronikkbutikk online";
 
-"banner_geerbest_message" = "Instant search in over 50,000 items at low prices.";
+"banner_geerbest_message" = "Hurtigsøk blant over 50 000 varer til lave priser.";
 
-"banner_rentalcars_title" = "Renting cars online";
+"banner_rentalcars_title" = "Leie av bil online";
 
-"banner_rentalcars_message" = "800 car rental companies in more than 49,000 car rental locations.";
+"banner_rentalcars_message" = "800 leiebilfirmaer på over 49 000 steder.";
 
-"banner_viator_title" = "Online tour search";
+"banner_viator_title" = "Αναζήτηση οργανωμένων εκδρομών online";
 
-"banner_viator_message" = "Search in over 50,000 tours all over the world.";
+"banner_viator_message" = "Søk blant over 50 000 omvisninger verden over.";
 
 /* december */
 "whatsnew_traffic" = "Trafikkdata i 36 land";
