--- a/iphone/Maps/sv.lproj/Localizable.strings
+++ b/iphone/Maps/sv.lproj/Localizable.strings
@@ -1724,35 +1724,37 @@
 
 "big_font" = "Större etiketter";
 
-"traffic_update_app" = "Please update MAPS.ME";
+"traffic_update_app" = "Uppdatera MAPS.ME";
 
-"traffic_update_app_message" = "To display traffic data, the application must be updated.";
+/* "traffic" as in road congestion */
+"traffic_update_app_message" = "Applikationen måste uppdateras för att trafikdata ska kunna visas.";
 
-"traffic_data_unavailable" = "Traffic data is not available";
+/* "traffic" as in "road congestion" */
+"traffic_data_unavailable" = "Trafikdata är inte tillgänglig";
 
-"banner_deliveryclub_title" = "Food delivery";
+"banner_deliveryclub_title" = "Matleverans";
 
-"banner_deliveryclub_message" = "Fast delivery from 4,000 restaurants. Order from Delivery Club.";
+"banner_deliveryclub_message" = "Snabbleverans från 4000 restauranger. Beställ från Delivery Club.";
 
-"banner_lamoda_title" = "Online clothing and shoe store";
+"banner_lamoda_title" = "Kläd- och skobutik online";
 
-"banner_lamoda_message" = "More than 1,000 brands. Up to 70% off. Free delivery all over the country.";
+"banner_lamoda_message" = "Över 1000 varumärken. Upp till 70 % i rabatt. Gratis leverans över hela landet.";
 
-"banner_tutu_title" = "Train tickets online";
+"banner_tutu_title" = "Tågbiljetter online";
 
-"banner_tutu_message" = "Train tickets to any city online - prices, search, and booking.";
+"banner_tutu_message" = "Tågbiljetter till vilken stad som helst online - priser, sökning och bokning.";
 
-"banner_geerbest_title" = "Online electronics store";
+"banner_geerbest_title" = "Elektronisk onlinebutik";
 
-"banner_geerbest_message" = "Instant search in over 50,000 items at low prices.";
+"banner_geerbest_message" = "Snabbsökning i över 50000 föremål till låga priser.";
 
-"banner_rentalcars_title" = "Renting cars online";
+"banner_rentalcars_title" = "Biluthyrning online";
 
-"banner_rentalcars_message" = "800 car rental companies in more than 49,000 car rental locations.";
+"banner_rentalcars_message" = "800 biluthyrningsföretag på mer än 49000 biluthyrningsplatser.";
 
-"banner_viator_title" = "Online tour search";
+"banner_viator_title" = "Sökning efter turer online";
 
-"banner_viator_message" = "Search in over 50,000 tours all over the world.";
+"banner_viator_message" = "Sök bland mer än 50000 turer över hela världen.";
 
 /* december */
 "whatsnew_traffic" = "Trafikdata i 36 länder";
